# january_os

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
arch/x86_64/: linker.ld
arch/x86_64/boot/: Cargo.toml
arch/x86_64/boot/src/: main.rs
docs/: VMWARE.md
kernel/: Cargo.toml
kernel/src/: main.rs
